# python-project-template

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json
.github/workflows/: build_and_release.yaml  docs.yaml  tests.yaml
docs/: index.md  release_notes.md
release_notes/: index.html
